# python-executor

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/: copilot-instructions.md
docs/: llm-instructions.md  pyx.instructions.md  pyx.pyx-help.instructions.md  pyx.pyx.instructions.md  pyx.shell.instructions.md
docs/inspect/: SKILL.md
docs/inspect/references/: code-verification.md  investigation-log-template.md  manifest-io.md
docs/learn/: SKILL.md
docs/learn/references/: learn-skill.md  summary.md
docs/manifest/: SKILL.md
docs/manifest/references/: manifest-io.md
docs/pyx/: SKILL.md
docs/pyx/references/: commands.md  environment.md  learn-skill.md  manifest-io.md  strict-mode.md
docs/summary/: SKILL.md
docs/summary/references/: leader-summary-template.md  markdown-images.md
guides/use-cases/: 01-incident-debugging-with-data-layer.md  02-global-vs-project-skills.md  03-migration-baseline-for-rewrite.md
src/python_executor_mcp/: __init__.py  cli.py  executor.py  server.py
src/pyx_cli/: __init__.py  cli.py
src/pyx_core/: __init__.py  constants.py  environment.py  executor.py  generator.py  shell_syntax.py
src/pyx_core/generator/: __init__.py  common.py  instruction.py  skill.py  summary.py
src/pyx_mcp/: __init__.py  server.py
