[project]
name = "python-executor-mcp"
version = "0.1.0"
description = "A cross-platform Python code executor with MCP server support for LLM integration"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.0.0",
]

[project.scripts]
python-executor = "python_executor_mcp.cli:main"
python-executor-mcp = "python_executor_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
